--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <h1 style="text-align: center">Životopis</h1>
 <img src="Fotka_1.jpeg" height="200" width="150" style="float: right">
 <h3>Edward Zářecký</h3>
-<p style="color:gray">Orlice 272</p>
-<p style="color:gray">561 51 Letohrad</p>
-<p style="color:gray">Telefon: +420 732 888 987</p>
-<p style="color:gray">E-mail: st52576@student.upce.cz</p>
-<p style="color:gray">Datum narození: 19. října 1995</p>
-<p style="color:gray">Místo narození: Ústí nad Orlicí</p>
+<p style="color:gray">Jelení 272</p>
+<p style="color:gray">000 51 Praha</p>
+<p style="color:gray">Telefon: +420 000 000 000</p>
+<p style="color:gray">E-mail: st00000@student.upce.cz</p>
+<p style="color:gray">Datum narození: 00. října 1900</p>
+<p style="color:gray">Místo narození: Praha</p>
 <h2>Praxe</h2>
-<p style="color:gray">2018 - současnost - Tlapnet s. r. o.</p>
+<p style="color:gray">2018 - současnost</p>
 <h2>Vzdělání</h2>
-<p style="color:gray">2016 - 2019 - Univerzita Pardubice, Fakulta elektrotechniky a informatiky</p>
-<p style="color:gray">2012 - 2016 - Vyšší odborná škola a Střední škola technická Česká Třebová</p>
+<p style="color:gray">2016 - 2019 - Univerzita</p>
+<p style="color:gray">2012 - 2016 - Střední škola</p>
 <h2>Jazykové znalosti</h2>
 <p style="color:gray">Angličtina - B1(Cambridge PET)</p>
 <p style="color:gray">Ruština - A1</p>
