--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1 style="text-align: center">Životopis</h1>
 <img src="Fotka_1.jpeg" height="200" width="150" style="float: right">
-<h3>Edward Zářecký</h3>
+<h3>Mr. Smith</h3>
 <p style="color:gray">Jelení 272</p>
 <p style="color:gray">000 51 Praha</p>
 <p style="color:gray">Telefon: +420 000 000 000</p>
