--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <h1 style="text-align: center">Životopis</h1>
 <img src="Fotka_1.jpeg" height="200" width="150" style="float: right">
 <h3>Mr. Smith</h3>
-<p style="color:gray">Jelení 272</p>
-<p style="color:gray">000 51 Praha</p>
+<p style="color:gray">Jelení 666</p>
+<p style="color:gray">000 00 Praha</p>
 <p style="color:gray">Telefon: +420 000 000 000</p>
-<p style="color:gray">E-mail: st00000@student.upce.cz</p>
+<p style="color:gray">E-mail: st00000@student.cz</p>
 <p style="color:gray">Datum narození: 00. října 1900</p>
 <p style="color:gray">Místo narození: Praha</p>
 <h2>Praxe</h2>
